--- a/cart.html
+++ b/cart.html
@@ -18,6 +18,8 @@
     <button id="clear-cart">Очистити кошик</button>
   </main>
 
+  <button id="buy-now-btn">Купити зараз</button>
+
   <script src="cart.js"></script>
 </body>
 </html>
