--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
         <button id="theme-toggle">🌙</button>
     </nav>
   </header>
+  <div class="filters">
+    <input type="text" id="search" placeholder="Пошук...">
+    <select id="sort">
+      <option value="default">Сортувати</option>
+      <option value="asc">Ціна ↑</option>
+      <option value="desc">Ціна ↓</option>
+    </select>
+  </div>  
   <main>
     <div id="product-list" class="product-list"></div>
     <ul id="cart-items" class="cart-items"></ul>
