--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Mini Shop</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,18 +17,23 @@
         <button id="theme-toggle">🌙</button>
     </nav>
   </header>
-  <div class="filters">
-    <input type="text" id="search" placeholder="Пошук...">
-    <select id="sort">
-      <option value="default">Сортувати</option>
-      <option value="asc">Ціна ↑</option>
-      <option value="desc">Ціна ↓</option>
-    </select>
+  <div class="row mb-3 justify-content-between align-items-center">
+    <div class="col-md-6 offset-md-3">
+      <input type="text" id="search" class="form-control text-left" placeholder="Пошук...">
+    </div>
+    <div class="col-md-3 text-end">
+      <select id="sort" class="form-select">
+        <option value="default">Сортувати</option>
+        <option value="asc">Ціна ↑</option>
+        <option value="desc">Ціна ↓</option>
+      </select>
+    </div>
   </div>  
   <main>
     <div id="product-list" class="product-list"></div>
     <ul id="cart-items" class="cart-items"></ul>
   </main>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
